# verloc

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.cpp  main.go
loopers/: BaseLooper.cpp  BaseLooper.h  MasterLooper.cpp  MasterLooper.h  NetInt.go  NetIntLooper.cpp  NetIntLooper.h  base.go  master.go
util/: sig_util.cpp  sig_util.h
